# github-copilot-upgrading

workshop/.github/workflows/: ci.yml
workshop/upgraded/: pyproject.toml
workshop/upgraded/guachi.egg-info/: PKG-INFO
workshop/upgraded/guachi/tests/: test_database.py
