[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
readme = "README.md"
authors = [
    { name="Alfredo Deza", email="alfredodeza@gmail.com" }
]
license = { text = "MIT" }
keywords = ["configuration", "management", "persistent", "dictionaries", "dictionary", "parse", "map", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pytest"
]